# api/app/models/user.rb
@@ -1,0 +1,12 @@
+class User < ApplicationRecord
+  has_secure_password
+  has_many :sessions, dependent: :destroy
+
+  normalizes :email, with: ->(email) { email.strip.downcase }
+
+  validates :email, presence: true, uniqueness: true,
+                     format: { with: URI::MailTo::EMAIL_REGEXP }
+  validates :password, length: { minimum: 8 }, allow_nil: true
+  validates :fpl_team_id, presence: true,
+                           numericality: { only_integer: true, greater_than: 0 }
+end
